exports[`invalid(1): {\"bugs\": {\"url\": \"https://github.com/user/repo/issues\"}} 1`] = `

[Input]
  1 | {"bugs": {"url": "https://github.com/user/repo/issues"}}

`;

exports[`invalid(1): {\"bugs\": {\"url\": \"https://github.com/user/repo/issues\"}} 2`] = `

Message:
> 1 | {"bugs": {"url": "https://github.com/user/repo/issues"}}
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`bugs\` field can use the shorthand string form.

Output:
  1 | {"bugs": "https://github.com/user/repo/issues"}

`;

exports[`invalid(10): {\"author\": {\"name\": \"A\", \"name\": \"B\"}} 1`] = `

[Input]
  1 | {"author": {"name": "A", "name": "B"}}

`;

exports[`invalid(10): {\"author\": {\"name\": \"A\", \"name\": \"B\"}} 2`] = `

Message:
> 1 | {"author": {"name": "A", "name": "B"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`author\` field can use the shorthand string form.

Output:
  1 | {"author": "B"}

`;

exports[`invalid(11): {\"funding\": {\"url\": \"https://user@github.com/user\"}} 1`] = `

[Input]
  1 | {"funding": {"url": "https://user@github.com/user"}}

`;

exports[`invalid(11): {\"funding\": {\"url\": \"https://user@github.com/user\"}} 2`] = `

Message:
> 1 | {"funding": {"url": "https://user@github.com/user"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`funding\` field can use the shorthand string form.

Output:
  1 | {"funding": "https://user@github.com/user"}

`;

exports[`invalid(12): {\"repository\": {\"type\": \"git\", \"url\": \"https://github.com/user/repo.GIT.git\"}} 1`] = `

[Input]
  1 | {"repository": {"type": "git", "url": "https://github.com/user/repo.GIT.git"}}

`;

exports[`invalid(12): {\"repository\": {\"type\": \"git\", \"url\": \"https://github.com/user/repo.GIT.git\"}} 2`] = `

Message:
> 1 | {"repository": {"type": "git", "url": "https://github.com/user/repo.GIT.git"}}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` field can use the shorthand string form.

Output:
  1 | {"repository": "github:user/repo.GIT"}

`;

exports[`invalid(13): {\"repository\": {\"type\": \"git\", \"url\": \"https://github.com/user/repo.GIT\"}} 1`] = `

[Input]
  1 | {"repository": {"type": "git", "url": "https://github.com/user/repo.GIT"}}

`;

exports[`invalid(13): {\"repository\": {\"type\": \"git\", \"url\": \"https://github.com/user/repo.GIT\"}} 2`] = `

Message:
> 1 | {"repository": {"type": "git", "url": "https://github.com/user/repo.GIT"}}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` field can use the shorthand string form.

Output:
  1 | {"repository": "github:user/repo.GIT"}

`;

exports[`invalid(14): {\"repository\": {\"type\": \"git\", \"url\": \"https://github.com/user/repo.Git\"}} 1`] = `

[Input]
  1 | {"repository": {"type": "git", "url": "https://github.com/user/repo.Git"}}

`;

exports[`invalid(14): {\"repository\": {\"type\": \"git\", \"url\": \"https://github.com/user/repo.Git\"}} 2`] = `

Message:
> 1 | {"repository": {"type": "git", "url": "https://github.com/user/repo.Git"}}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` field can use the shorthand string form.

Output:
  1 | {"repository": "github:user/repo.Git"}

`;

exports[`invalid(2): {\"funding\": {\"url\": \"https://github.com/sponsors/user\"}} 1`] = `

[Input]
  1 | {"funding": {"url": "https://github.com/sponsors/user"}}

`;

exports[`invalid(2): {\"funding\": {\"url\": \"https://github.com/sponsors/user\"}} 2`] = `

Message:
> 1 | {"funding": {"url": "https://github.com/sponsors/user"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`funding\` field can use the shorthand string form.

Output:
  1 | {"funding": "https://github.com/sponsors/user"}

`;

exports[`invalid(3): {\"author\": {\"name\": \"Sindre Sorhus\"}} 1`] = `

[Input]
  1 | {"author": {"name": "Sindre Sorhus"}}

`;

exports[`invalid(3): {\"author\": {\"name\": \"Sindre Sorhus\"}} 2`] = `

Message:
> 1 | {"author": {"name": "Sindre Sorhus"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^ The \`author\` field can use the shorthand string form.

Output:
  1 | {"author": "Sindre Sorhus"}

`;

exports[`invalid(4): {\"author\": {\"name\": \"Sindre Sorhus\", \"email\": \"sindre@example.com\", \"url\": \"https://sindresorhus.com\"}} 1`] = `

[Input]
  1 | {"author": {"name": "Sindre Sorhus", "email": "sindre@example.com", "url": "https://sindresorhus.com"}}

`;

exports[`invalid(4): {\"author\": {\"name\": \"Sindre Sorhus\", \"email\": \"sindre@example.com\", \"url\": \"https://sindresorhus.com\"}} 2`] = `

Message:
> 1 | {"author": {"name": "Sindre Sorhus", "email": "sindre@example.com", "url": "https://sindresorhus.com"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`author\` field can use the shorthand string form.

Output:
  1 | {"author": "Sindre Sorhus <sindre@example.com> (https://sindresorhus.com)"}

`;

exports[`invalid(5): {\"contributors\": [{\"name\": \"Alice\"}]} 1`] = `

[Input]
  1 | {"contributors": [{"name": "Alice"}]}

`;

exports[`invalid(5): {\"contributors\": [{\"name\": \"Alice\"}]} 2`] = `

Message:
> 1 | {"contributors": [{"name": "Alice"}]}
    |                   ^^^^^^^^^^^^^^^^^ The \`contributors\` field can use the shorthand string form.

Output:
  1 | {"contributors": ["Alice"]}

`;

exports[`invalid(6): {\"repository\": {\"type\": \"git\", \"url\": \"git+https://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"repository": {"type": "git", "url": "git+https://github.com/user/repo.git"}}

`;

exports[`invalid(6): {\"repository\": {\"type\": \"git\", \"url\": \"git+https://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"repository": {"type": "git", "url": "git+https://github.com/user/repo.git"}}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` field can use the shorthand string form.

Output:
  1 | {"repository": "github:user/repo"}

`;

exports[`invalid(7): {\"repository\": {\"url\": \"git+https://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"repository": {"url": "git+https://github.com/user/repo.git"}}

`;

exports[`invalid(7): {\"repository\": {\"url\": \"git+https://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"repository": {"url": "git+https://github.com/user/repo.git"}}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` field can use the shorthand string form.

Output:
  1 | {"repository": "github:user/repo"}

`;

exports[`invalid(8): {\n\t\"bugs\": {\n\t\t\"url\": \"https://example.com/old\",\n\t\t\"url\": \"https://github.com/user/repo/issues\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"bugs": {
  3 | 		"url": "https://example.com/old",
  4 | 		"url": "https://github.com/user/repo/issues"
  5 | 	}
  6 | }

`;

exports[`invalid(8): {\n\t\"bugs\": {\n\t\t\"url\": \"https://example.com/old\",\n\t\t\"url\": \"https://github.com/user/repo/issues\"\n\t}\n} 2`] = `

Message:
  1 | {
> 2 | 	"bugs": {
    | 	        ^
> 3 | 		"url": "https://example.com/old",
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		"url": "https://github.com/user/repo/issues"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 	}
    | ^^ The \`bugs\` field can use the shorthand string form.
  6 | }

Output:
  1 | {
  2 | 	"bugs": "https://github.com/user/repo/issues"
  3 | }

`;

exports[`invalid(9): {\"repository\": {\"type\": \"git\", \"url\": \"git+https://github.com/user/repo/\"}} 1`] = `

[Input]
  1 | {"repository": {"type": "git", "url": "git+https://github.com/user/repo/"}}

`;

exports[`invalid(9): {\"repository\": {\"type\": \"git\", \"url\": \"git+https://github.com/user/repo/\"}} 2`] = `

Message:
> 1 | {"repository": {"type": "git", "url": "git+https://github.com/user/repo/"}}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`repository\` field can use the shorthand string form.

Output:
  1 | {"repository": "github:user/repo"}

`;
